# unicode-joining-type

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml
src/: joining_group.rs  joining_group_tables.rs  joining_type.rs  joining_type_tables.rs  lib.rs  tables.rs
