[package]
name = "unicode-joining-type"
version = "0.3.1"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/unicode-joining-type"
documentation = "https://docs.rs/unicode-joining-type/0.3.0/unicode_joining_type/"
repository = "https://github.com/yeslogic/unicode-joining-type"

readme = "README.md"
license = "Apache-2.0"

description = "Fast lookup of the Unicode Joining Type and Joining Group properties"
keywords = ["unicode", "joining", "arabic", "shaping"]
categories = ["text-processing"]

[badges]
travis-ci = { repository = "yeslogic/unicode-joining-type" }

[dependencies]
