[package]
name = "unicode-joining-type"
version = "0.6.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/unicode-joining-type"
documentation = "https://docs.rs/unicode-joining-type"
repository = "https://github.com/yeslogic/unicode-joining-type"

readme = "README.md"
license = "Apache-2.0"

description = "Fast lookup of the Unicode Joining Type and Joining Group properties"
keywords = ["unicode", "joining", "arabic", "shaping", "no-std"]
categories = ["text-processing"]

[dependencies]
